Clean code.
Signed-off-by: Stéphane Galland <galland@arakhne.org>